src/main/java/com/example/sb_assign_16_05_23/errors/ErrorResponse.java
package com.example.sb_assign_16_05_23.errors;


import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.http.HttpStatus;

import java.util.HashMap;
import java.util.Map;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class ErrorResponse {

    private Map<String, String> messages = new HashMap<>();
    private HttpStatus status;
}
